fix gradient animated border, does not work on safari

--- a/public/App.css
+++ b/public/App.css
@@ -540,7 +540,7 @@ textarea {
 
 #gradient-border-1 {
   --angle: 0deg;
-  /* border-top: 2px solid; */
+  border-top: 2px solid;
   border-bottom: 2px solid;
   border-image: conic-gradient(from var(--angle), rgb(85, 146, 232), rgb(206, 69, 197), rgb(85, 146, 232)) 1;
   animation: 6s rotate linear infinite;
